--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -22,6 +22,11 @@
   name = "Publications"
   url = "#featured"
   weight = 40
+  
+  [[main]]
+  name = "Members"
+  url = "#members"
+  weight = 50
 
 [[main]]
   name = "Contact"
