--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -214,8 +214,8 @@ plugins_js  = []
   publication_view = 2
   talk_view = 2
 [members]
-1. Jie Jiang progessor
-2. Wei Guo postgraduate
+ Jie Jiang progessor
+ Wei Guo postgraduate
 ############################
 ## Comments
 ############################
