--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -57,7 +57,7 @@ description = "Solar and stellar physics"
 # Enable source code highlighting? true/false
 # Documentation: https://sourcethemes.com/academic/docs/writing-markdown-latex/#highlighting-options
 highlight = true
-highlight_languages = ["python","fortran","matlab","bash","shell"]  # Add support for highlighting additional languages
+highlight_languages = ["python","fortran","matlab","bash","shell","markdown"]  # Add support for highlighting additional languages
 # highlight_style = "github"  # For supported styles, see https://cdnjs.com/libraries/highlight.js/
 
 # Enable LaTeX math rendering? true/false
@@ -115,7 +115,7 @@ contact_links = [
   #{icon = "twitter", icon_pack = "fab", name = "DM Me", link = "https://twitter.com/Twitter"},
   #{icon = "skype", icon_pack = "fab", name = "Skype Me", link = "skype:echo123?call"},
   #{icon = "keybase", icon_pack = "fab", name = "Chat on Keybase", link = "https://keybase.io/"},
-  {icon = "envelope", icon_pack = "fac", name = "Email Me", link = "mailto:jiejiang@buaa.edu.cn"},
+  {icon = "envelope", icon_pack = "fab", name = "Email Me", link = "mailto:jiejiang@buaa.edu.cn"},
   # {icon = "telegram", icon_pack = "fab", name = "Telegram Me", link = "https://telegram.me/@Telegram"},
   ]
 
