--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -27,11 +27,14 @@
   name = "Members"
   url = "#members"
   weight = 50
-
+  [[main]]
+  name = "data"
+  url = "#data"
+  weight = 60
 [[main]]
   name = "Contact"
   url = "#contact"
-  weight = 60
+  weight = 70
 
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/files/cv.pdf` and uncomment the lines below.
