--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -14,7 +14,7 @@ baseurl = "/"
 
 # Enter a copyright notice to display in the site footer.
 # To display a copyright symbol, type `&copy;`. For current year, type `{year}`.
-copyright = "SPRG OF Jiang"
+copyright = "SPRG OF Jiang 2020"
 
 ############################
 ## Advanced options below ##
