--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -48,7 +48,7 @@ local_business_type = ""
 org_name = "School of Space and Environment, Beihang University"
 
 # Description for social sharing and search engines. If undefined, superuser role is used in place.
-description = "Solar and stellar physics"
+description = "Solar and Stellar Magnetic Cycle"
 
 ############################
 ## Site Features
